# 3Dify

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: sphere.txt
app/src/main/assets/shaders/: cube.frag  cube.vert  depth_point_cloud.vert  sphere.frag  sphere.vert
app/src/main/python/: Converter3D.py  myTest.py
app/src/main/res/: main.xml
app/src/main/res/drawable/: animation.xml  animation_white_them.xml  button_selector.xml  camera_icon_bar.xml  custom_button_background.xml  file_blend.xml  file_off.xml  file_pdf.xml  file_ply.xml  file_stl.xml  file_tds.xml  ic_arrow_back.xml  ic_menu_about_us.xml  ic_menu_gallery.xml  ic_menu_home.xml  ic_menu_settings.xml  ic_theme_switch_light.xml  ic_theme_switch_night.xml  main_logo.xml  nav_item_background.xml  nav_item_rounded_background.xml  nav_item_text_color.xml  switch_thumb.xml  switch_track.xml
app/src/main/res/layout/: activity_arcore.xml  activity_main.xml  activity_splash.xml  app_bar_main.xml  content_main.xml  custom_menu_item.xml  fragment_about_us.xml  fragment_camera.xml  fragment_gallery.xml  fragment_home.xml  fragment_settings.xml  nav_header_main.xml  nav_header_main_theme.xml  obj_file_item.xml
app/src/main/res/menu/: custom_navigation_menu.xml  main.xml
app/src/main/res/navigation/: mobile_navigation.xml
engine/: build.gradle
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
nativelib/: .gitignore  build.gradle
nativelib/src/main/: AndroidManifest.xml
nativelib/src/main/cpp/: CMakeLists.txt  PointCloudTo3DModel.cpp  PointCloudTo3DModel.h  nativelib.cpp
nativelib/src/main/cpp/pclib/jniLibs/arm64-v8a/flann/include/flann/algorithms/: kdtree_index.h
nativelib/src/main/cpp/pclib/jniLibs/arm64-v8a/flann/include/flann/util/: heap.h  lsh_table.h  random.h
pclibrarycpp/: .gitignore  build.gradle
pclibrarycpp/src/main/cpp/: CMakeLists.txt  FindEigen3.cmake  Findandroid-toolchain.cmake  Findboost.cmake  Findflann.cmake  Findlz4.cmake  Findpcl.cmake  conan_paths.cmake  conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt  native-lib.cpp  pclibrarycpp.cpp
pclibrarycpp/src/main/cpp/.conan/profiles/: arm64-v8a
pclibrarycpp/src/main/cpp/cmake/: conan.cmake
pclibrarycpp/src/main/cpp/pcl/include/pcl/: point_traits.h
pclibrarycpp/src/main/cpp/pcl/include/pcl/features/: from_meshes.h
pclibrarycpp/src/main/cpp/pcl/include/pcl/io/: hdl_grabber.h  image_grabber.h  robot_eye_grabber.h  vlp_grabber.h
pclibrarycpp/src/main/cpp/pcl/include/pcl/recognition/face_detection/: face_detector_data_provider.h  rf_face_detector_trainer.h  rf_face_utils.h
pclibrarycpp/src/main/cpp/pcl/include/pcl/recognition/hv/: hypotheses_verification.h
pclibrarycpp/src/main/cpp/pcl/include/pcl/surface/: processing.h
viewerapp/: build.gradle
viewerapp/src/main/: AndroidManifest.xml
(+69 files in other folders)
